# ControlloStatoNSIS

./: .coverage  .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  ControlloStatoNSIS.spec  FINAL_DESIGN_REPORT.md  FINAL_SPACING_REPORT.md  GUIDA_TEST.md  ICON_MODERNIZATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  REFACTORING_REPORT.md  build_windows.bat  config.py  dati.xlsx  deploy.py  deploy_windows.py  logging_config.py  main.py  main.spec  main_window.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  setup.py  splash_screen_simple.py  temp_main.py  test_progress_fixed.py  ui_components.py  update_version.py  version.py  web_engine.py  windows_config.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CLEANUP_REPORT.md  TEST_IMPROVEMENT_REPORT.md
electron-nsis-app/: .gitignore  README.md  package.json  start.bat  start.ps1  test-electron.js  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  webpack.config.js
electron-nsis-app/assets/: ICONS_README.md
electron-nsis-app/main/: browser-view-manager.ts  index.ts  ipc-handlers.ts  preload.ts
electron-nsis-app/main/automation/: playwright-automation.ts  webview-automation.ts
electron-nsis-app/main/excel/: excel-handler.ts
electron-nsis-app/main/workers/: processor.ts
electron-nsis-app/renderer/: index.html
electron-nsis-app/renderer/src/: App.tsx  global.d.ts  index.tsx
electron-nsis-app/renderer/src/components/: CompletionDialog.css  CompletionDialog.tsx  (+23 more)
electron-nsis-app/scripts/: cleanup_legacy_icons.py  generate_app_icons.py  generate_icons.py
electron-nsis-app/shared/constants/: config.d.ts  config.d.ts.map  config.js  config.js.map  config.ts
electron-nsis-app/shared/types/: excel-types.d.ts  excel-types.d.ts.map  excel-types.js  excel-types.js.map  excel-types.ts  update-types.ts
icons_legacy/: MIGRATION_GUIDE.txt  README.txt
main_window/: __init__.py  app.py  excel_handler.py  state_manager.py  ui_manager.py  web_automation.py  worker.py
tests/: __init__.py  test_basic_functionality.py  test_config.py  test_excel_handler.py  test_state_manager.py  test_web_automation.py  test_worker.py
(+13 files in other folders)
